<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    android:background="@color/blue"
    android:padding="50dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputText" />

    <EditText
        android:labelFor="@id/uioriginalText"
        android:inputType="text"
        android:autofillHints="@string/changeLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/uioriginalText" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputLetter"
            />

        <EditText
            android:labelFor="@id/uilChoice"
            android:inputType="text"
            android:autofillHints="@string/changeLetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uilChoice"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeLetter"/>

        <EditText
            android:labelFor="@id/uilNew"
            android:inputType="text"
            android:autofillHints="@string/changeLetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uilNew"/>

    </LinearLayout>

    <Button
        style="@style/AppTheme"
        android:background="@drawable/bshape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchButton"
        android:onClick="chamgeLineOnClick" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            style="@style/AppTheme"
            android:background="@drawable/bshape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="removeVowelOnClick"
            android:text="@string/vowelButton"
            android:layout_margin="5sp"
            android:textSize="13sp" />

        <Button
            style="@style/AppTheme"
            android:background="@drawable/bshape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="removeConsonantOnClick"
            android:text="@string/consonantButton"
            android:layout_margin="5sp"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            style="@style/AppTheme"
            android:background="@drawable/bshape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyButton"
            android:onClick="copytoClipboard"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uiResult"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <ImageButton
            android:contentDescription="@string/lemgthposttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:onClick="lemgthClick"
            android:background="@color/dark_blue"
            />
    </LinearLayout>
</LinearLayout>
